# backend

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  cookiecutter-config-file.yml  docker-compose.deploy.yml  docker-compose.override.yml  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: codeql-analysis.yml  docker-build.yaml  test.yaml
app/: alembic.ini  celeryworker.dockerfile  create-test-db-container.sh  pyproject.toml  tests-start.sh
app/alembic/: env.py
app/alembic/versions/: 0810153fc3e3_add_school_model_in_database_and_link_.py  138d9d60edf8_rename_user_school_id_foreign_key.py  2e583c3937d1_update_file_model.py  2f4521008b5b_added_admin_models.py  42f206c339df_link_division_and_student.py  47da74065fe7_add_student_model.py  4b09d0a1149f_add_school_model_in_database.py  5034f9c72f24_add_description_to_file.py  55c144d0952f_add_course_model.py  6c38bfd37c53_add_name_field_to_year_model.py  6ea84c37e13e_update_year_model.py  712896d43a93_add_in_new_stuff.py  7b2f235b8ffe_added_year_models.py  8769c70e44a7_initial_revision.py  8f1dfe37f875_update_profile_picture_length.py  9f4b569fbad6_update_course_model_with_panel_and_.py  bacefdad7004_increase_size_of_profile_picture_field.py  bc055fd38dce_make_school_head_non_nullable.py  bf4fd3096cc0_add_professor_and_division_models.py  c32be91965c2_add_file_model.py  d4867f3a4c0a_first_revision.py  eb2d83538c3a_cascade_delete_school_and_user_based_.py  eca9a685530f_added_term_model.py  f0d919cf23f6_added_term_model.py
app/app/: exceptions.py  initial_data.py  main.py  utils.py
app/app/api/: deps.py
app/app/api/api_v1/: api.py
app/app/api/api_v1/endpoints/: admins.py  courses.py  divisions.py  file.py  lectures.py  login.py  professors.py  schools.py  students.py  terms.py  timeslots.py  timetable.py  users.py  utils.py  years.py
app/app/core/: config.py  security.py
app/app/crud/: __init__.py  base.py  crud_admin.py  crud_course.py  crud_division.py  crud_file.py  crud_lecture.py  crud_professor.py  crud_school.py  crud_student.py  crud_student_division.py  crud_term.py  crud_timeslot.py  crud_user.py  crud_year.py
app/app/db/: base.py  base_class.py  init_db.py  session.py
app/app/email-templates/src/: new_admin.mjml
app/app/models/: __init__.py  course.py  division.py  division_student.py  file.py  item.py  lecture.py  school.py  student_division.py  term.py  timeslot.py  user.py  year.py
app/app/models/users/: admin.py  professor.py  student.py  user.py
app/app/schemas/: __init__.py  course.py  division.py  file.py  lecture.py  school.py  student_division.py  term.py  timeslot.py  token.py  year.py
app/app/schemas/users/: admin.py  professor.py  student.py  user.py
app/app/tests/: conftest.py
app/app/tests/api/api_v1/: test_admins.py  test_courses.py  test_divisions.py  test_lectures.py  test_login.py  test_professors.py  test_schools.py  test_students.py  test_terms.py  test_timeslots.py  test_users.py  test_years.py
app/app/tests/crud/: test_admin.py  test_course.py  test_division.py  test_lecture.py  test_professor.py  test_school.py  test_student.py  test_term.py  test_timeslot.py  test_user.py  test_year.py
app/app/tests/utils/: course.py  division.py  lecture.py  professor.py  school.py  student.py  term.py  timeslot.py  user.py  utils.py  year.py
app/scripts/: format.sh
backend/: celeryworker.dockerfile
backend/app/: pyproject.toml
backend/app/alembic/: env.py
backend/app/app/: utils.py
backend/app/app/api/: deps.py
backend/app/scripts/: lint.sh
scripts/: test-local.sh
(+17 files in other folders)
