[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.16.0"
fastapi = "^0.70.1"
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.26.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.0.1"
pydantic = {extras = ["dotenv"], version = "^1.9.0a2"}
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.2"
alembic = "^1.7.5"
sqlalchemy = "^1.3.16"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-decouple = "^3.5"
sentry-sdk = "^1.5.1"
SQLAlchemy = "^1.4.29"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
mypy = "^0.920"
black = "^21.12b0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest = "^6.2.5"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.black]
line-length = 120

[tool.pytest.ini_options]
filterwarnings = ["ignore", ":::imported_lib"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

