[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
python-multipart = "^0.0.5"
email-validator = "^1.3.1"
requests = "^2.28.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.1.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
alembic = "^1.9.2"
sqlalchemy = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sentry-sdk = "^1.14.0"
Jinja2 = "^3.1.2"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.12.0"
autoflake = "^2.0.0"
flake8 = "^6.0.0"
pytest = "^7.2.1"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.black]
line-length = 120

[tool.pytest.ini_options]
filterwarnings = ["ignore", ":::imported_lib"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

